fix letter spacing for features section  text

--- a/src/scss/layout/_features.scss
+++ b/src/scss/layout/_features.scss
@@ -14,6 +14,7 @@
     max-width: 540px;
     margin-left: auto;
     margin-right: auto;
+    letter-spacing: -0.025em;
     color: $c-text-dark;
     @include breakpoint("md") {
       font-size: clamp(1.75rem, 2.77vw, 2.5rem);
@@ -25,6 +26,7 @@
     margin-right: auto;
     margin-top: 1em;
     line-height: 1.75;
+    letter-spacing: 0.00666em;
     color: $c-text-light;
     @include breakpoint("lg") {
       font-size: 1.125rem;
